[package]
name = "uefi-wrappers"
version = "0.1.0"
edition = "2018"
exclude = [
    "test-runner/**"
]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
uefi = {version = "0.12.0", features = ["exts","alloc"]}
uefi-services = "0.9.0"
log = { version = "0.4.14", default-features = false }

[workspace]
members = [
    "test-runner"
]