[package]
name = "test-runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
uefi = {version = "0.12.0", features = ["exts","alloc","logger"]}
uefi-services = "0.9.0"
log = { version = "0.4.14", default-features = false }
uefi-wrappers = {path="../."}